--- a/pages/index.html
+++ b/pages/index.html
@@ -3,11 +3,18 @@ layout   : default
 permalink: /
 # Custom Page Variables
 # ─────────────────────
-title: Bootstrap 4 &mdash; Voorbeeld
+title: Sybmyrine 
 ---
-<div class="jumbotron">
-    <h1 class="display-3">{{ page.title }}</h1>
-</div>
+
 <div class="container">
-    <a class="btn btn-primary" href="http://getbootstrap.com/docs/4.0/getting-started/introduction/">Bootstrap 4 documentation</a>
-</div>
+        <div class="row">
+            <div class= "col-12 col-lg-6">
+                <h1> Over ons </h1>
+            </div>
+    
+            <div class= "col-12 col-lg-6">
+                    <h1> Over ons </h1>
+            </div>
+    
+        </div>
+    </div>
