--- a/pages/route.html
+++ b/pages/route.html
@@ -3,5 +3,5 @@ layout   : default
 permalink: route.html
 # Custom Page Variables
 # ─────────────────────
-title: Bootstrap 4 &mdash; Voorbeeld
+title: Route
 ---
