--- a/pages/submyrine.html
+++ b/pages/submyrine.html
@@ -3,7 +3,7 @@ layout   : default
 permalink: submyrine.html
 # Custom Page Variables
 # ─────────────────────
-title: Bootstrap 4 &mdash; Voorbeeld
+title: Wat is Submyrine
 ---
 
 <div class="jumbotron">
