--- a/pages/verkoopsvoorwaarden.html
+++ b/pages/verkoopsvoorwaarden.html
@@ -3,5 +3,14 @@ layout   : default
 permalink: verkoopsvoorwaarden.html
 # Custom Page Variables
 # ─────────────────────
-title: Bootstrap 4 &mdash; Voorbeeld
+title: Verkoopswoorwaarden
 ---
+
+<div class="container">
+        <div class="row">
+            <div class= "col-12 col-12">
+                <h1> VERKOOPSVOORWAARDEN </h1>
+                <p></p>
+            </div>
+        </div>
+</div>
