--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,5 +3,50 @@ layout   : default
 permalink: contact.html
 # Custom Page Variables
 # ─────────────────────
-title: Bootstrap 4 &mdash; Voorbeeld
+title: Contact
 ---
+
+<div class="container">
+    <div class="row">
+        <div class= "col-12 col-12">
+            <h1> CONTACT </h1>
+    <div class="row">
+        <div class= "col-12 col-lg-4">
+            <h2> Adres: Havensegevelstraat 232, 9000 Antwerpen TEL.: 0472899192</h2>
+        </div>
+        </div>
+    </div>
+    </div>
+
+    <div class="row">
+        <div class= "col-12 col-lg-6">
+                <form>
+                        <div class="form-group">
+                          <label for="exampleInputEmail1">Naam en voornaam</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputPassword1">E-mail</label>
+                          <input type="password" class="form-control" id="exampleInputPassword1">
+                          <small id="emailHelp" class="form-text text-muted">We delen nooit uw e-mailadres met iemand anders.</small>
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleFormControlTextarea1">Bericht</label>
+                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                        </div>
+
+
+                        <button type="button" class="btn btn-outline-info">Verstuur</button>
+                      </form>
+
+
+        </div>
+
+        <div class= "col-12 col-md-6">
+                <div class="span8">
+                        <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2495.5250546956668!2d4.363820215679001!3d51.28306103490209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c40a19a82616b9%3A0xa52cff3c80e8dd1a!2sHaven%2C+2030+Antwerpen!5e0!3m2!1snl!2sbe!4v1512310349657"></iframe>
+                </div>
+        </div>
+
+    </div>
+</div>
