--- a/pages/route.html
+++ b/pages/route.html
@@ -3,5 +3,34 @@ layout   : default
 permalink: route.html
 # Custom Page Variables
 # ─────────────────────
-title: Route
+title: Route aantal
 ---
+
+<div class="container">
+    <div class="row">
+
+        <div class= "col-sm-12 col-lg-12">
+            <h1> PLAN JE ROUTE </h1>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-6">
+            <div class="jumbotron jumbotron-fluid">
+            <h3 class ="text-center">SUBMYRINE VOOR <br>PARTICULIEREN</h3>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-6">
+            <div class="jumbotron jumbotron-fluid">
+            <h3 class ="text-center">SUBMYRINE VOOR <br>GROEPEN</h3>
+            </div>
+        </div>
+
+        <div class="col-12">
+            
+            <a href="route2.html" class="btn btn-outline-info" style="float:right;">DOORGAAN</a>
+            <a href="" class="btn btn-outline-info" style="float: right;">ANNULEREN</a>
+        </div>
+    
+
+    </div>
+</div>
