--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@ title: Sybmyrine
 
 <div class="container">
         <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="text-index col-12 col-md-6 col-lg-4">
                     <h2>OVER ONS</h2>
                     <p>Wij zijn een team van vier personen, onze kapitein Edward John Smith, onze machinist François Pelsaert, de kok Simon Tackaert en hulpkok Margot Eeckhout. Wij staan 24/7 paraat.</p>
                 </div>
@@ -32,7 +32,7 @@ title: Sybmyrine
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="text-index col-12 col-md-6 col-lg-4">
                     <h2>WAT EN WAAR</h2>
                     <p>Submyrine© bevindt zich in de haven van Antwerpen. Het is makkelijk berijkbaar met de wagen of het openbaar vervoer. Wij bieden alle klanten tijdens elke bottocht een hapje en een drankje aan, om deze unieke ervaring nog leuker te maken.</p>
                 </div>
