--- a/pages/route.html
+++ b/pages/route.html
@@ -9,18 +9,18 @@ title: Route aantal
 <div class="container">
     <div class="row">
 
-        <div class= "col-sm-12 col-lg-12">
+        <div class= "col-12 col-md-12 col-lg-12">
             <h1> PLAN JE ROUTE </h1>
         </div>
 
         <div class="col-12 col-md-6 col-lg-6">
-            <div class="jumbotron jumbotron-fluid">
+            <div class="particulieren jumbotron jumbotron-fluid">
             <h3 class ="text-center">SUBMYRINE VOOR <br>PARTICULIEREN</h3>
             </div>
         </div>
 
         <div class="col-12 col-md-6 col-lg-6">
-            <div class="jumbotron jumbotron-fluid">
+            <div class="groepen jumbotron jumbotron-fluid">
             <h3 class ="text-center">SUBMYRINE VOOR <br>GROEPEN</h3>
             </div>
         </div>
