--- a/pages/submyrine.html
+++ b/pages/submyrine.html
@@ -14,20 +14,20 @@ title: Wat is Submyrine
 
 <div class="container">
     <div class="row">
-         <div class="col-12 col-md-6 col-lg-4">
+         <div class="text-submyrine col-12 col-md-6 col-lg-4">
              <h2>GESCHIEDENIS</h2>
                 <p>Onze Submyrine© is ontworpen in het jaar 1936, in opdracht van de toenmalige Franse generaal, Charles de Gaulle. Men voorspelde dat WOII snel van start zou gaan. Het duurde drie jaren voor de Submyrine© volledig klaar was. De Submyrine© overleefde de oorlog en werd in 2004 geel geschild als symbool voor WOII.</p>
          </div>
 
-         <div class="col-12 col-md-6 col-lg-4">
+         <div class="text-submyrine col-12 col-md-6 col-lg-4">
             <h2>SPECIFICATIES</h2>
-               <p>73m lang 
-                 9m breed 
-                 7m diep 
-                 Gewicht: 2800 ton onder water 
-                 Dieptebereik: 1700m 
-                 Snelheid: 21 knopen 
-                 Max aantal personen: 50 personen 
+               <p>73m lang <br>
+                 9m breed <br>
+                 7m diep <br>
+                 Gewicht: 2800 ton onder water <br>
+                 Dieptebereik: 1700m <br>
+                 Snelheid: 21 knopen <br>
+                 Max aantal personen: 50 personen <br>
                  Dieselmotor
           </div>
         
