--- a/pages/verkoopsvoorwaarden.html
+++ b/pages/verkoopsvoorwaarden.html
@@ -9,7 +9,7 @@ title: Verhuurswoorwaarden
 <div class="container">
      <div class="row">
          <div class= "col-12 col-md-12 col-lg-12">
-             <h1> VERHUURSVOORWAARDEN </h1>
+             <h1> VOORWAARDEN </h1>
              
          </div>
 
