--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,12 +6,12 @@ permalink: contact.html
 title: Contact
 ---
 
-<div class="container">
+<div class="contact container">
     <div class="row">
-        <div class= "col-sm-12 col-lg-12">
+        <div class= "col-sm-12 col-md-12 col-lg-12">
             <h1> CONTACT </h1>
     <div class="row">
-        <div class= "col-12 col-lg-4">
+        <div class= "col-12 col-md-12 col-lg-4">
             <h3> Adres: Havensegevelstraat 232, 9000 Antwerpen TEL.: 0472899192</h3>
         </div>
         </div>
@@ -19,7 +19,7 @@ title: Contact
     </div>
 
     <div class="row">
-        <div class= "col-12 col-md-6 col-lg-6">
+        <div class= "col-12 col-md-12 col-lg-6">
                 <form>
                         <div class="form-group">
                           <label for="exampleInputEmail1">Naam en voornaam</label>
