--- a/pages/route3.html
+++ b/pages/route3.html
@@ -12,7 +12,7 @@ title: Route datum
         <div class="col-12 col-md-12 col-lg-6">
                 
                     <div class="month">                                                             
-                         <span style="font-size:40px">Augustus 2018</span>                                
+                         <span style="font-size:70px">2018</span>                                
                     </div>
                           
                           <ul class="weekdays">
