--- a/pages/route.html
+++ b/pages/route.html
@@ -16,21 +16,16 @@ title: Route aantal
         <div class="col-12 col-md-6 col-lg-6">
             <div class="particulieren jumbotron jumbotron-fluid">
             <h3 class ="text-center">SUBMYRINE VOOR <br>PARTICULIEREN</h3>
+            <a href="route2.html" class="knopjumbo btn btn-outline-light">HUUR</a>
             </div>
         </div>
 
         <div class="col-12 col-md-6 col-lg-6">
             <div class="groepen jumbotron jumbotron-fluid">
             <h3 class ="text-center">SUBMYRINE VOOR <br>GROEPEN</h3>
+            <a href="route2.html" class="knopjumbo btn btn-outline-light">HUUR</a>
             </div>
         </div>
-
-        <div class="col-12">
-            
-            <a href="route2.html" class="btn btn-outline-info" style="float:right;">DOORGAAN</a>
-            <a href="" class="btn btn-outline-info" style="float: right;">ANNULEREN</a>
-        </div>
-    
 
     </div>
 </div>
