--- a/pages/route2.html
+++ b/pages/route2.html
@@ -18,15 +18,18 @@ title: Route
                     </div>
             </div>
         </div>
+
+        <div class="titelpad col-12">
+                <h2 class="text-center">KIES JE ROUTE</h2>
+        </div>
 <!-- ROUTE 1 -->
 
         <div class= "col-12 col-md-12 col-lg-4">
-            <h2> ROUTE 1 </h2>
+            <h3> ROUTE 1 </h3>
             <p><strong>vertrek</strong>: in de Antwerpse haven <br>
                 <strong>stop</strong>: langs de Belgische kust <br>
                 <strong>Tijd</strong>: een halve dag
             </p>
-
         <div class="antwerpen jumbotron jumbotron-fluid">
         </div>
  
@@ -41,7 +44,7 @@ title: Route
 <!-- ROUTE 2 -->
 
         <div class= "col-12 col-md-12 col-lg-4">
-            <h2> ROUTE 2 </h2>
+            <h3> ROUTE 2 </h3>
             <p><strong>vertrek</strong>: in Blankenberge <br>
                 <strong>stop</strong>: langs de Nederlandse kust <br>
                 <strong>Tijd</strong>: een halve dag
@@ -61,7 +64,7 @@ title: Route
 <!-- ROUTE 3 -->
 
         <div class= "col-12 col-md-12 col-lg-4">
-                <h2> ROUTE 3 </h2>
+                <h3> ROUTE 3 </h3>
                 <p><strong>vertrek</strong>: in de Antwerpse haven <br>
                     <strong>stop</strong>: langs de Engelse kust <br>
                     <strong>Tijd</strong>: een volledige dag
@@ -77,20 +80,18 @@ title: Route
             </div>
         </div>
 
-              
+        <div class="col-12 col-md-12 col-lg-12 text-right">
+            <hr>
+            <div class="textbetaling">
+                <h2>Totaal</h2>
+                <p>ROUTE 1 // 4 PERSONEN = 120 EURO </p>
+                <p>ROUTE 2 // 2 PERSONEN = 75 EURO</p>
+                <p> = 195 EURO</p>
+            </div>
+            <a href="route3.html" class="btn btn-outline-info" style="float:right;">DOORGAAN</a>
+            <a href="route1.html" class="btn btn-outline-info" style="float: right;">ANNULEREN</a>
+        </div>
+
     </div>
-
-
-
-        <div class="jumbotronbetaling jumbotron jumbotron-fluid text-right">
-
-        <h2>TOTAAL</h2> 
-        <p> ROUTE 1 VOOR "4" PERSONEN.</p>
-        <p>€ xx, xx</p>
-        <a href="route3.html" class="btn btn-outline-info" style="float:right;">DOORGAAN</a>
-        <a href="route.html" class="btn btn-outline-info" style="float: right;">ANNULEREN</a>
-        </div>
-        </div>
-
-</div>  
 </div>
+
