--- a/pages/route4.html
+++ b/pages/route4.html
@@ -9,10 +9,20 @@ title: Route controle
 <div class="container">
         <h1> PLAN JE ROUTE </h1>
     <div class="row">
-            <div class="col-12">
-                    <h2 class="text-center">WINKELMAND</h2>
-                </div>
-                <div class="col-12">
+        <!-- breadcrumb -->
+        <div class="col-12 col-md-12 col-lg-12">
+                <div class="progress">
+                       <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                            60%
+                       </div>
+               </div>
+        </div>
+
+        <div class="titelpad col-12">
+                <h2 class="text-center">WINKELMAND</h2>
+        </div>
+
+                <div class="winkelmand col-12">
                     <table class="table">
                         <tbody>
                             <tr>
@@ -25,11 +35,11 @@ title: Route controle
                                 <td>ROUTE 2 <br>
                                     AANTAL: 2 <br>
                                     DATUM: 14/11/17</td>
-                                <td>€ 75,50</td>
+                                <td>€ 75</td>
                             </tr>
                             <tr>
                             <td>TOTAAL</td>
-                                <td>€ 195,50</td>
+                                <td>€ 195</td>
         
                             </tr>
                         </tbody>
