--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,10 +10,12 @@ title: Contact
     <div class="row">
         <div class= "col-sm-12 col-md-12 col-lg-12">
             <h1> CONTACT </h1>
+            
     <div class="row">
         <div class= "col-12 col-md-12 col-lg-4">
             <h3> Adres: Havensegevelstraat 232, 9000 Antwerpen TEL.: 0472899192</h3>
         </div>
+
         </div>
     </div>
     </div>
@@ -21,25 +23,24 @@ title: Contact
     <div class="row">
         <div class= "col-12 col-md-12 col-lg-6">
                 <form>
-                        <div class="form-group">
-                          <label for="exampleInputEmail1">Naam en voornaam</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        </div>
-                        <div class="form-group">
-                          <label for="exampleInputPassword1">E-mail</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1">
-                          <small id="emailHelp" class="form-text text-muted">We delen nooit uw e-mailadres met iemand anders.</small>
-                        </div>
-                        <div class="form-group">
-                          <label for="exampleFormControlTextarea1">Bericht</label>
-                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
-                        </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Naam en voornaam</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
 
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">E-mail</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
+                        <small id="emailHelp" class="form-text text-muted">We delen nooit uw e-mailadres met iemand anders.</small>
+                    </div>
 
-                        <button type="button" class="btn btn-outline-info">Verstuur</button>
-                      </form>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Bericht</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                    </div>
 
-
+                    <button type="button" class="contactknop btn btn-outline-info">Verstuur</button>
+                </form>
         </div>
 
         <div class= "col-12 col-md-12 col-lg-6">        
