--- a/pages/route2.html
+++ b/pages/route2.html
@@ -20,7 +20,7 @@ title: Route
         </div>
 
         <div class="titelpad col-12">
-                <h2 class="text-center">KIES JE ROUTE</h2>
+            <h2 class="text-center">KIES JE ROUTE</h2>
         </div>
 <!-- ROUTE 1 -->
 
@@ -88,8 +88,8 @@ title: Route
                 <p>ROUTE 2 // 2 PERSONEN = 75 EURO</p>
                 <p> = 195 EURO</p>
             </div>
-            <a href="route3.html" class="btn btn-outline-info" style="float:right;">DOORGAAN</a>
-            <a href="route1.html" class="btn btn-outline-info" style="float: right;">ANNULEREN</a>
+            <a href="route3.html" class="buttoncenter btn btn-outline-info" style="float:right;">DOORGAAN</a>
+            <a href="route1.html" class="buttoncenter btn btn-outline-info" style="float: right;">ANNULEREN</a>
         </div>
 
     </div>
